# python-lib

./: .gitmodules  CHANGELOG.md  README.md  SOURCE.yml  WIRING.json  copier.yml  release-please-config.json  renovate.json5
template/: .editorconfig  .envrc  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RTK.md  SETUP.md  [[[ _copier_conf.answers_file ]]]  broken-wiring.txt  pyproject.toml  renovate.json5  typos.toml  wiring-added.txt  wiring-renamed.txt
template/.agents/skills/changed/: SKILL.md
template/.agents/skills/changed/agents/: openai.yaml
template/.agents/skills/code-guardrails/: SKILL.md
template/.agents/skills/code-guardrails/agents/: openai.yaml
template/.agents/skills/finish-worktree/: SKILL.md
template/.agents/skills/finish-worktree/agents/: openai.yaml
template/.agents/skills/git-finish/: SKILL.md
template/.agents/skills/git-finish/agents/: openai.yaml
template/.agents/skills/git-finish/references/: pull_request_template.md
template/.agents/skills/handoff/: SKILL.md
template/.agents/skills/handoff/agents/: openai.yaml
template/.agents/skills/plan-internal-from-contract/: SKILL.md
template/.agents/skills/plan-internal-from-contract/agents/: openai.yaml
template/.agents/skills/plan-internal-from-contract/references/: implementation_notes_template.md  implementation_phase_template.md  plan_root_readme_template.md  planning-protocol.md
template/.agents/skills/plan-internal-from-contract/references/protocol/: 01-architecture-baseline.md  02-discovery-stage.md  03-implementation-plan-structure.md  04-phase-rules.md  05-final-state-and-pass-criteria.md  06-implementation-boundaries.md  README.md
template/.agents/skills/python-library-rules/: SKILL.md
template/.agents/skills/python-library-rules/agents/: openai.yaml
template/.agents/skills/python-library-rules/references/: README.md
template/.agents/skills/python-library-rules/references/authoring/: README.md  reference_authoring_template.md
template/.agents/skills/python-library-rules/references/core/: README.md  comment_template.md  comment_traceability_pattern.md  config_pattern.md  defaults_pattern.md  docstring_template.md  exceptions_pattern.md  logging_pattern.md  public_api_pattern.md
template/.agents/skills/python-library-rules/references/docs/: README.md  dependencies_doc_template.md  docs_organization_pattern.md  docs_rules_pattern.md  index_doc_template.md  principles_doc_template.md  system_doc_template.md  usage_doc_template.md  vertical_slice_doc_template.md
template/.agents/skills/python-library-rules/references/verification/: README.md  e2e_test_template.md  property_based_testing_doc_template.md  test_file_template.md  tests_routing_pattern.md  verification_doc_template.md  workbench_script_template.md
template/.agents/skills/python-library-rules/scripts/: check_docs_shape.py
template/.agents/skills/python-library-rules/scripts/_shared/: __init__.py  context.py  markdown.py  python_source.py  reporting.py  runner.py
template/.agents/skills/python-library-rules/scripts/core/: __init__.py  docstring_template.py
template/.agents/skills/python-library-rules/scripts/docs/: __init__.py  dependencies_doc_template.py  index_doc_template.py  principles_doc_template.py  system_doc_template.py  usage_doc_template.py  vertical_slice_doc_template.py
template/.agents/skills/warmup/: SKILL.md
template/.agents/skills/warmup/agents/: openai.yaml
template/.devcontainer/: Dockerfile  Dockerfile.ci  devcontainer.json
template/.github/: MAINTAINER_SETUP.md  pull_request_template.md
template/.github/actions/setup-dev-env/: action.yml
template/.github/scripts/: install-sync-validation-tools.sh
template/.github/workflows/: build-ci-image.yml  ci.yml  python-lib-ci-baseline.yml  python-lib-ci-e2e-slice.yml  python-lib-ci-package.yml  release.yml  sync-starter-template.yml
template/docs/: README.md
template/docs/[[[ package_name ]]]/: README.md  dependencies.md  usage.md
template/docs/[[[ package_name ]]]/architecture/: README.md  system.md
template/docs/[[[ package_name ]]]/architecture/concepts/: README.md  public-boundary-and-errors.md
template/docs/[[[ package_name ]]]/architecture/flows/: README.md
template/docs/[[[ package_name ]]]/verification/: README.md  public-boundary-and-errors.md  workbench.md
template/docs/[[[ package_name ]]]/verification/e2e/: README.md  public-boundary.md
template/examples/: __init__.py
template/examples/[[[ package_name ]]]/: __init__.py  config_demo.py
template/scripts/: README.md
template/scripts/env/: doctor.sh  project_config.sh  secrets.sh  setup.sh
template/src/[[[ package_name ]]]/: __init__.py  py.typed
template/src/[[[ package_name ]]]/_api/: __init__.py  config.py  defaults.py  errors.py  types.py
template/src/[[[ package_name ]]]/_internal/: __init__.py
template/src/[[[ package_name ]]]/_internal/config/: __init__.py  assembly.py  models.py  state.py  validation.py
template/tests/: README.md  __init__.py  conftest.py
template/tests/[[[ package_name ]]]/: __init__.py  conftest.py
template/tests/[[[ package_name ]]]/e2e/: __init__.py
template/tests/[[[ package_name ]]]/e2e/examples/: __init__.py  test_examples_smoke.py
template/tests/[[[ package_name ]]]/e2e/public_boundary/: __init__.py  test_public_config_pipeline.py
template/tests/[[[ package_name ]]]/integration/: __init__.py  test_config_lifecycle.py
template/tests/[[[ package_name ]]]/property_based/: __init__.py
template/tests/[[[ package_name ]]]/property_based/internal/: __init__.py
template/tests/[[[ package_name ]]]/property_based/public_contract/: __init__.py  test_config_contract.py
template/tests/[[[ package_name ]]]/support/: __init__.py
template/tests/[[[ package_name ]]]/unit/: __init__.py  test_public_package.py
template/workbench/: __init__.py
template/workbench/[[[ package_name ]]]/: __init__.py
tests/: render-smoke.sh  template_acceptance.py
(+8 files in other folders)
